# cli-todo

./: Cargo.toml  LICENSE  README.md
setup/: README.md  setup.iss
src/: main.rs
src/arg_parser/: arg_parser.rs  mod.rs  parse_error.rs
src/domain/: item.rs  list.rs  mod.rs
src/operations/: executer.rs  list_io.rs  mod.rs  operation.rs  operation_error.rs
src/operations2/: add_operation.rs  clear_operation.rs  done_operation.rs  list_operation.rs  mod.rs  operation.rs  remove_operation.rs
