[package]
name = "cli-todo"
version = "0.2.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "todo"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
